--- a/styles/scss/base/_base.scss
+++ b/styles/scss/base/_base.scss
@@ -23,7 +23,7 @@ body {
 }
 
 hr {
-  width: 100vw;
+  width: 100%;
   align-self: center;
   opacity: 0.5;
 }
