--- a/styles/scss/layout/_containers.scss
+++ b/styles/scss/layout/_containers.scss
@@ -144,15 +144,15 @@
 }
 
 .display {
-  align-self: center;
+  // align-self: center;
   line-height: 1.75;
   text-align: left;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-content: center;
-  flex-wrap: wrap;
-  margin: 5px;
+  margin-left: auto;
+  margin-right: auto;
   max-width: 90%;
   a {
     text-decoration: underline;
